# django-dynamic-qr

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
django_dynamic_qr/: __init__.py  admin.py  apps.py  settings.py  tasks.py  urls.py
django_dynamic_qr/access/: __init__.py  guards.py
django_dynamic_qr/analytics/: __init__.py  exporters.py  geo.py  logger.py
django_dynamic_qr/api/: serializers.py  urls.py  views.py
django_dynamic_qr/bulk/: __init__.py  csv_importer.py  zip_exporter.py
django_dynamic_qr/engine/: __init__.py  exporter.py  generator.py
django_dynamic_qr/management/commands/: generate_qr.py
django_dynamic_qr/migrations/: 0001_initial.py
django_dynamic_qr/models/: __init__.py  folder.py  qr_code.py  scan_log.py
django_dynamic_qr/templates/django_dynamic_qr/: base.html  image_gallery.html  link_list.html  menu.html  social_links.html  vcard_plus.html
django_dynamic_qr/templates/django_dynamic_qr/access/: deactivated.html  expired.html  geo_blocked.html  not_yet.html  password.html  scan_limit.html
django_dynamic_qr/types/: __init__.py  app_store.py  base.py  email_type.py  image.py  link_list.py  menu.py  pdf.py  plain_text.py  sms.py  social_links.py  url.py  vcard.py  vcard_plus.py  whatsapp.py  wifi.py
django_dynamic_qr/views/: export.py  redirect.py  urls.py
docs/: index.html
example_project/: manage.py
example_project/example_project/: settings.py  urls.py
tests/: conftest.py  test_types.py
