[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dynamic-qr"
version = "1.0.0"
description = "Full-featured dynamic QR code package for Django — 14 types, analytics, access control, REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["django", "qr", "qrcode", "dynamic", "analytics", "redirect"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=4.2",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "segno>=1.6",
    "user-agents>=2.2",
    "requests>=2.28",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
api = ["djangorestframework>=3.14"]
celery = ["celery>=5.3"]
maxmind = ["geoip2>=4.7"]
dev = ["pytest>=7.4", "pytest-django>=4.7", "factory-boy>=3.3", "coverage>=7.3"]

[project.urls]
Homepage = "https://github.com/yourname/django-dynamic-qr"
Repository = "https://github.com/yourname/django-dynamic-qr"

[tool.setuptools.packages.find]
exclude = ["tests*", "example*"]
